# PatchExtractor

./: .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  build_docs.sh  extract_patches.py  matplotlibrc  plot_time_scaling.py  pyproject.toml  requirements-dev.conda.yaml  setup-miniconda-patched-requirements-dev.conda.yaml  time_scaling.py
.github/workflows/: build-docs.yml  code-quality.yml  deploy-docs.yml  package-install.yml
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/patch_extractor/: _patch_extractor.html  misc.html
src/patch_extractor/: _argument_processing.py  _mask_utils.py  _mpp_utils.py  _patch_extractor.py  _patch_utils.py  _region_extraction.py  misc.py
tests/: LICENSE  README.md  pyproject.toml  requirements-dev.conda.yaml  test_import.py  test_instantiation_args.py  test_mask_polygons.py  test_misc.py
tests/src/patch_extractor/: __init__.py  _mask_utils.py  _patch_extractor.py  _patch_utils.py  _region_extraction.py
