[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patch_extractor"
version = "0.12.0"
description = "WSI patch extractor for computional pathology."
requires-python = ">=3.8,<=3.13"


authors = [
  { name="Jim Denholm", email="j.denholm.2017@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE.md"}

dependencies = ["tiffslide", "numpy", "scikit-image", "pandas", "pandas-stubs", "scikit-learn", "scipy", "zarr<3.0"]


[project.urls]
"Homepage" = "https://github.com/azu-biopharmaceuticals-rd/PatchExtractor/"
"Bug Tracker" = "https://github.com/azu-biopharmaceuticals-rd/PatchExtractorIssues"

[tool.setuptools]
package-dir = {}

[tool.setuptools.package-data]
torch_tools = ["py.typed"]
