[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patch_extractor"
version = "0.12.0"
description = "WSI patch extractor for computional pathology."
authors = [
  { name="Jim Denholm", email="j.denholm.2017@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE.md"}

dependencies = ["tiffslide", "numpy", "scikit-image", "pandas", "pandas-stubs"]


[project.urls]
"Homepage" = "https://github.com/jdenholm/PatchExtractor"
"Bug Tracker" = "https://github.com/jdenholm/PatchExtractor/Issues"

[tool.setuptools]
package-dir = {}

[tool.setuptools.package-data]
torch_tools = ["py.typed"]
